--- a/index.html
+++ b/index.html
@@ -92,6 +92,12 @@
               </div>
             </div>
           </div>
+              <div class="col3">
+            <div class="item">
+              <div class="zoom">
+                <img src="/img/cars1.jpeg" alt="" />
+              </div>
+              <div class="itemText">
         </div>
       </div>
     </section>
